// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render <Intro /> <Intro /> should render 1`] = `
Array [
  <div
    className="property__name-wrapper"
  >
    <h1
      className="property__name"
    >
      Beautiful & luxurious studio at great location
    </h1>
    <button
      className="property__bookmark-button button"
      onClick={[MockFunction]}
      type="button"
    >
      <svg
        className="property__bookmark-icon"
        height="33"
        width="31"
      >
        <use
          xlinkHref="#icon-bookmark"
        />
      </svg>
      <span
        className="visually-hidden"
      >
        To bookmarks
      </span>
    </button>
  </div>,
  <div
    className="property__rating rating"
  >
    <div
      className="property__stars rating__stars"
    >
      <span
        style={
          Object {
            "width": "40%",
          }
        }
      />
      <span
        className="visually-hidden"
      >
        Rating
      </span>
    </div>
    <span
      className="property__rating-value rating__value"
    >
      1.8
    </span>
  </div>,
  <ul
    className="property__features"
  >
    <li
      className="property__feature property__feature--entire"
    >
      apartment
    </li>
    <li
      className="property__feature property__feature--bedrooms"
    >
      3
       Bedrooms
    </li>
    <li
      className="property__feature property__feature--adults"
    >
      Max 
      4
       adults
    </li>
  </ul>,
  <div
    className="property__price"
  >
    <b
      className="property__price-value"
    >
      €
      100
    </b>
    <span
      className="property__price-text"
    >
       night
    </span>
  </div>,
]
`;

exports[`Render <Intro /> <Intro /> should render with premium, book marks & error 1`] = `
Array [
  <div
    className="property__mark"
  >
    <span>
      Premium
    </span>
  </div>,
  <div
    className="property__name-wrapper"
  >
    <h1
      className="property__name"
    >
      Beautiful & luxurious studio at great location
    </h1>
    <button
      className="property__bookmark-button button property__bookmark-button--active property__bookmark-button--error"
      onClick={[MockFunction]}
      type="button"
    >
      <svg
        className="property__bookmark-icon"
        height="33"
        width="31"
      >
        <use
          xlinkHref="#icon-bookmark"
        />
      </svg>
      <span
        className="visually-hidden"
      >
        To bookmarks
      </span>
    </button>
  </div>,
  <div
    className="property__rating rating"
  >
    <div
      className="property__stars rating__stars"
    >
      <span
        style={
          Object {
            "width": "40%",
          }
        }
      />
      <span
        className="visually-hidden"
      >
        Rating
      </span>
    </div>
    <span
      className="property__rating-value rating__value"
    >
      1.8
    </span>
  </div>,
  <ul
    className="property__features"
  >
    <li
      className="property__feature property__feature--entire"
    >
      apartment
    </li>
    <li
      className="property__feature property__feature--bedrooms"
    >
      3
       Bedrooms
    </li>
    <li
      className="property__feature property__feature--adults"
    >
      Max 
      4
       adults
    </li>
  </ul>,
  <div
    className="property__price"
  >
    <b
      className="property__price-value"
    >
      €
      100
    </b>
    <span
      className="property__price-text"
    >
       night
    </span>
  </div>,
]
`;
